--- a/package.json
+++ b/package.json
@@ -14,28 +14,41 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.10.5",
     "@vercel/postgres": "^0.5.0",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "formik": "^2.4.5",
+    "jarallax": "^2.1.4",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.15.0",
+    "react-slick": "^0.29.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.3.3",
     "use-debounce": "^10.0.0",
-    "zod": "^3.22.2"
+    "wouter": "^2.11.0",
+    "yup": "^1.3.0",
+    "zod": "^3.22.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.0.4",
     "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.14",
-    "@vercel/style-guide": "^5.0.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4"
   },
