--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.10.5",
     "@vercel/postgres": "^0.5.0",
@@ -32,11 +36,7 @@
     "use-debounce": "^10.0.0",
     "wouter": "^2.11.0",
     "yup": "^1.3.0",
-    "zod": "^3.22.2",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.8",
-    "@mui/material": "^5.14.8"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
